tried another fix to avoid overflow

--- a/assets/nav-bar/nav-bar.css
+++ b/assets/nav-bar/nav-bar.css
@@ -100,7 +100,7 @@ information from multiple pages off W3
 
   /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
   @media screen and (max-width: 600px) {
-    .topnav a:not(:first-child), .dropdown .dropbtn, .topnav input[type=text] {
+    .topnav a, .dropdown .dropbtn, .topnav input[type=text] {
       display: none;
     }
     .topnav a.icon {
